content projection usage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <div class="menu-container">
   <button [routerLink]="['/']" mat-raised-button color="primary">Home</button>
   <button [routerLink]="['/user-form']" mat-raised-button color="accent">User Form</button>
+  <button [routerLink]="['/complete-form']" mat-raised-button color="warn">Complete Form</button>
 </div>
 <router-outlet></router-outlet>
