--- a/src/app/form-handler/form-handler.component.html
+++ b/src/app/form-handler/form-handler.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup">
+<form (ngSubmit)="handleSubmit()" [formGroup]="formGroup">
   <div class="form-container">
     <ng-content></ng-content>
   </div>
