--- a/src/app/complete-form/complete-form.component.scss
+++ b/src/app/complete-form/complete-form.component.scss
@@ -1,5 +1,13 @@
-:host {
+// :host {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.action_container {
+  text-align: center;
 }
