--- a/src/app/input-field/input-field.component.html
+++ b/src/app/input-field/input-field.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="formControl">
-  <span [ngStyle]="fieldClass" [class]="fieldClass">
+  <span [ngStyle]="fieldStyle" [class]="fieldClass">
     <ng-container [ngSwitch]="type">
       <ng-container *ngSwitchCase="'date'">
         <mat-form-field>
@@ -30,6 +30,28 @@
             {{formControl | validationHandler: placeholder:errorMessage}}
           </mat-error>
         </mat-form-field>
+      </ng-container>
+      <ng-container *ngSwitchCase="'radio'">
+        <!-- <mat-label>{{placeholder}}</mat-label> -->
+        <mat-radio-group [formControl]="formControl" aria-label="Select an option">
+          <mat-radio-button *ngFor="let option of optionsList" [value]="option">
+            {{option?.text || option?.title}}</mat-radio-button>
+        </mat-radio-group>
+        <mat-error *ngIf="formControl.hasError('required')&&formControl?.isDirty">
+          {{formControl | validationHandler: placeholder:errorMessage}}
+        </mat-error>
+      </ng-container>
+      <ng-container *ngSwitchCase="'checkbox'">
+        <!-- <mat-form-field [appearance]="appearance"> -->
+        <mat-label>{{placeholder}}</mat-label>
+        <mat-checkbox [formControl]="formControl">
+        </mat-checkbox>
+        <!-- <input (hideCross)="showCrossIcon = $event" (onBlurEmit)="emitValue($event)" formField [autocomplete]="autoComplete"
+            matInput [formControl]="formControl" [type]="type" name="" id="" /> -->
+        <mat-error>
+          {{formControl | validationHandler: placeholder:errorMessage}}
+        </mat-error>
+        <!-- </mat-form-field> -->
       </ng-container>
       <ng-container *ngSwitchDefault>
         <mat-form-field [appearance]="appearance">
